Revert "many small changes"
This reverts commit efd554ac36922c608aede8d379b53b70647e4264.

--- a/model.ipynb
+++ b/model.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-15T10:55:42.589692Z",
-     "start_time": "2019-08-15T10:55:42.587274Z"
+     "end_time": "2019-08-14T13:10:59.962610Z",
+     "start_time": "2019-08-14T13:10:59.960177Z"
     }
    },
    "outputs": [],
@@ -22,11 +22,27 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-15T10:55:43.901459Z",
-     "start_time": "2019-08-15T10:55:42.598645Z"
+     "end_time": "2019-08-14T13:11:03.640061Z",
+     "start_time": "2019-08-14T13:10:59.966107Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/piotrgabrys/.pyenv/versions/miniconda3-4.3.30/lib/python3.6/site-packages/lightgbm/__init__.py:46: UserWarning: Starting from version 2.2.1, the library file in distribution wheels for macOS is built by the Apple Clang (Xcode_8.3.3) compiler.\n",
+      "This means that in case of installing LightGBM from PyPI via the ``pip install lightgbm`` command, you don't need to install the gcc compiler anymore.\n",
+      "Instead of that, you need to install the OpenMP library, which is required for running LightGBM on the system with the Apple Clang compiler.\n",
+      "You can install the OpenMP library by the following command: ``brew install libomp``.\n",
+      "  \"You can install the OpenMP library by the following command: ``brew install libomp``.\", UserWarning)\n",
+      "Using TensorFlow backend.\n",
+      "WARNING: Logging before flag parsing goes to stderr.\n",
+      "W0814 15:11:03.619426 4610758080 deprecation_wrapper.py:119] From /Users/piotrgabrys/.pyenv/versions/miniconda3-4.3.30/lib/python3.6/site-packages/optuna/integration/tensorflow.py:7: The name tf.train.SessionRunHook is deprecated. Please use tf.estimator.SessionRunHook instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import gc\n",
@@ -57,8 +73,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-15T10:55:43.905438Z",
-     "start_time": "2019-08-15T10:55:43.903001Z"
+     "end_time": "2019-08-14T13:11:03.648576Z",
+     "start_time": "2019-08-14T13:11:03.644019Z"
     },
     "lines_to_next_cell": 2
    },
@@ -73,8 +89,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-15T10:55:52.268025Z",
-     "start_time": "2019-08-15T10:55:43.908472Z"
+     "end_time": "2019-08-14T13:11:09.942873Z",
+     "start_time": "2019-08-14T13:11:03.651979Z"
     },
     "_cell_guid": "79c7e3d0-c299-4dcb-8224-4455121ee9b0",
     "_uuid": "d629ff2d2480ee46fbb7e2d37f6b5fab8052498a",
@@ -99,8 +115,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-15T10:56:02.051222Z",
-     "start_time": "2019-08-15T10:55:52.269458Z"
+     "end_time": "2019-08-14T13:11:22.841402Z",
+     "start_time": "2019-08-14T13:11:09.944690Z"
     }
    },
    "outputs": [
@@ -116,7 +132,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/pgabrys/data/kaggle/ieee/ieee/codes/fe_users.py:19: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
+      "/Users/piotrgabrys/data/python3/ieee/codes/fe_users.py:19: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
       "of pandas will change to not sort by default.\n",
       "\n",
       "To accept the future behavior, pass 'sort=False'.\n",
@@ -146,8 +162,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-15T10:56:04.619847Z",
-     "start_time": "2019-08-15T10:56:02.052557Z"
+     "end_time": "2019-08-14T13:11:26.078826Z",
+     "start_time": "2019-08-14T13:11:22.843262Z"
     }
    },
    "outputs": [
@@ -168,8 +184,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-15T10:56:05.241159Z",
-     "start_time": "2019-08-15T10:56:04.621111Z"
+     "end_time": "2019-08-14T13:11:26.875316Z",
+     "start_time": "2019-08-14T13:11:26.081448Z"
     }
    },
    "outputs": [],
@@ -182,8 +198,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-15T10:56:33.235758Z",
-     "start_time": "2019-08-15T10:56:05.242487Z"
+     "end_time": "2019-08-14T13:12:02.489063Z",
+     "start_time": "2019-08-14T13:11:26.877345Z"
     }
    },
    "outputs": [],
@@ -202,8 +218,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-15T10:56:33.634659Z",
-     "start_time": "2019-08-15T10:56:33.238633Z"
+     "end_time": "2019-08-14T13:12:03.061473Z",
+     "start_time": "2019-08-14T13:12:02.492576Z"
     }
    },
    "outputs": [],
@@ -216,8 +232,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-15T10:56:40.981799Z",
-     "start_time": "2019-08-15T10:56:33.636379Z"
+     "end_time": "2019-08-14T13:12:14.092156Z",
+     "start_time": "2019-08-14T13:12:03.063835Z"
     }
    },
    "outputs": [],
@@ -230,8 +246,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-15T10:56:41.047101Z",
-     "start_time": "2019-08-15T10:56:40.983197Z"
+     "end_time": "2019-08-14T13:12:14.174766Z",
+     "start_time": "2019-08-14T13:12:14.093974Z"
     },
     "lines_to_next_cell": 2
    },
@@ -245,8 +261,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-15T10:57:00.129487Z",
-     "start_time": "2019-08-15T10:56:41.048359Z"
+     "end_time": "2019-08-14T13:12:41.541952Z",
+     "start_time": "2019-08-14T13:12:14.176800Z"
     },
     "lines_to_next_cell": 2
    },
@@ -261,69 +277,22 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-15T10:57:00.141121Z",
-     "start_time": "2019-08-15T10:57:00.130835Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(590540, 436)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-08-15T10:57:10.578681Z",
-     "start_time": "2019-08-15T10:57:00.143378Z"
+     "end_time": "2019-08-14T13:12:52.478978Z",
+     "start_time": "2019-08-14T13:12:41.543885Z"
     }
    },
    "outputs": [],
    "source": [
-    "X_train = train.copy()\n",
+    "y_train = train['isFraud'].copy()\n",
+    "\n",
+    "\n",
+    "X_train = train.drop('isFraud', axis=1)\n",
     "X_test = test.copy()\n",
     "\n",
     "del train, test\n",
     "\n",
     "#fill in mean for floats\n",
-    "X_train, X_test = prepro.prepro(X_train, X_test)\n",
-    "\n",
-    "y_train = X_train['isFraud'].copy()\n",
-    "X_train = X_train.drop('isFraud', axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-08-15T10:57:16.926683Z",
-     "start_time": "2019-08-15T10:57:10.580309Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mem. usage decreased to 566.00 Mb (26.0% reduction)\n"
-     ]
-    }
-   ],
-   "source": [
-    "X_train = utils.reduce_mem_usage(X_train)"
+    "X_train, X_test = prepro.prepro(X_train, X_test)"
    ]
   },
   {
@@ -335,11 +304,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-15T10:57:16.932510Z",
-     "start_time": "2019-08-15T10:57:16.928266Z"
+     "end_time": "2019-08-14T13:12:52.493456Z",
+     "start_time": "2019-08-14T13:12:52.486361Z"
     }
    },
    "outputs": [],
@@ -350,11 +319,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-15T10:57:16.936451Z",
-     "start_time": "2019-08-15T10:57:16.934254Z"
+     "end_time": "2019-08-14T13:12:52.501487Z",
+     "start_time": "2019-08-14T13:12:52.496629Z"
     }
    },
    "outputs": [],
@@ -364,11 +333,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-15T10:57:16.950454Z",
-     "start_time": "2019-08-15T10:57:16.937957Z"
+     "end_time": "2019-08-14T13:12:52.513170Z",
+     "start_time": "2019-08-14T13:12:52.504723Z"
     }
    },
    "outputs": [],
@@ -395,11 +364,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-15T10:57:16.959843Z",
-     "start_time": "2019-08-15T10:57:16.952014Z"
+     "end_time": "2019-08-14T13:12:52.523301Z",
+     "start_time": "2019-08-14T13:12:52.515667Z"
     }
    },
    "outputs": [],
@@ -435,11 +404,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-15T10:57:16.977340Z",
-     "start_time": "2019-08-15T10:57:16.961950Z"
+     "end_time": "2019-08-14T13:12:52.533249Z",
+     "start_time": "2019-08-14T13:12:52.525940Z"
     }
    },
    "outputs": [],
@@ -451,8 +420,6 @@
     "    else:\n",
     "        study = optuna.create_study()\n",
     "    study.optimize(objective, n_trials=5)\n",
-    "    \n",
-    "    joblib.dump(study, 'study.pkl')\n",
     "    \n",
     "    params = study.best_params\n",
     "\n",
@@ -470,11 +437,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-15T10:57:16.987028Z",
-     "start_time": "2019-08-15T10:57:16.979403Z"
+     "end_time": "2019-08-14T13:12:52.547630Z",
+     "start_time": "2019-08-14T13:12:52.536030Z"
     }
    },
    "outputs": [],
@@ -485,9 +452,9 @@
     "    \n",
     "    num_leaves = trial.suggest_int('num_leaves', 2, 500) \n",
     "    max_depth = trial.suggest_int('max_depth', 2, 300) \n",
-    "    n_estimators = trial.suggest_int('n_estimators', 50, 2000) \n",
-    "    subsample_for_bin = trial.suggest_int('subsample_for_bin', 1_000, 500_000) \n",
-    "    min_child_samples = trial.suggest_int('min_child_samples', 20, 100_000) \n",
+    "    n_estimators = trial.suggest_int('n_estimators', 100, 2000) \n",
+    "    subsample_for_bin = trial.suggest_int('subsample_for_bin', 100_000, 500_000) \n",
+    "    min_child_samples = trial.suggest_int('min_child_samples', 20, 10000) \n",
     "    reg_alpha = trial.suggest_uniform('reg_alpha', 0.0, 2.0) \n",
     "    colsample_bytree = trial.suggest_uniform('colsample_bytree', 0.5, 1.0) \n",
     "    learning_rate = trial.suggest_loguniform('learning_rate', 1e-5, 1e-0)   \n",
@@ -510,11 +477,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-15T10:57:17.004231Z",
-     "start_time": "2019-08-15T10:57:16.989500Z"
+     "end_time": "2019-08-14T13:12:52.556915Z",
+     "start_time": "2019-08-14T13:12:52.550537Z"
     }
    },
    "outputs": [],
@@ -533,46 +500,23 @@
     "\n",
     "else:\n",
     "    \n",
-    "    params = {'num_leaves': 280,\n",
-    "             'max_depth': 104,\n",
-    "             'n_estimators': 1857,\n",
-    "             'subsample_for_bin': 486701,\n",
-    "             'min_child_samples': 201,\n",
-    "             'reg_alpha': 1.2603270316257835,\n",
-    "             'colsample_bytree': 0.6015289408690518,\n",
-    "             'learning_rate': 0.05929809414975412}"
+    "    params = {'num_leaves': 302,\n",
+    "             'max_depth': 157,\n",
+    "             'n_estimators': 1200,\n",
+    "             'subsample_for_bin': 290858,\n",
+    "             'min_child_samples': 79,\n",
+    "             'reg_alpha': 1.0919573524807885,\n",
+    "             'colsample_bytree': 0.5653288564015742,\n",
+    "             'learning_rate': 0.028565794309535042}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-15T10:57:17.190091Z",
-     "start_time": "2019-08-15T10:57:17.008185Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "model = LGBMClassifier(metric='auc')\n",
-    "model.set_params(**params)\n",
-    "\n",
-    "n_fold = 8\n",
-    "folds = StratifiedKFold(n_splits=n_fold, shuffle=True)\n",
-    "\n",
-    "model_scores = []\n",
-    "model_scores_tr = []\n",
-    "for train_index, valid_index in folds.split(X_train, y_train):\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-08-15T11:13:01.391371Z",
-     "start_time": "2019-08-15T10:57:17.192796Z"
+     "end_time": "2019-08-14T14:26:25.765450Z",
+     "start_time": "2019-08-14T13:12:52.559338Z"
     }
    },
    "outputs": [
@@ -580,46 +524,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ROC accuracy: 0.9337095398448495, ROC train: 0.9462740777957357\n",
-      "ROC accuracy: 0.9307622192727658, ROC train: 0.9467711135301886\n",
-      "ROC accuracy: 0.9318905317421051, ROC train: 0.948521007115059\n",
-      "ROC accuracy: 0.9352611240418174, ROC train: 0.947665617006054\n",
-      "ROC accuracy: 0.9392216809994107, ROC train: 0.946997129934992\n",
-      "ROC accuracy: 0.9367005750765356, ROC train: 0.9476480999077515\n",
-      "ROC accuracy: 0.9331124432819499, ROC train: 0.9504486982426944\n",
-      "ROC accuracy: 0.9367193593986736, ROC train: 0.9468805255221646\n",
-      "0.9347\n",
-      "{'num_leaves': 280, 'max_depth': 104, 'n_estimators': 1857, 'subsample_for_bin': 486701, 'min_child_samples': 201, 'reg_alpha': 1.2603270316257835, 'colsample_bytree': 0.6015289408690518, 'learning_rate': 0.05929809414975412}\n"
+      "ROC accuracy: 0.9762962995571658\n",
+      "ROC accuracy: 0.9792364570859659\n",
+      "ROC accuracy: 0.9789477070938123\n",
+      "ROC accuracy: 0.9755484028383585\n",
+      "ROC accuracy: 0.9816712831067586\n",
+      "ROC accuracy: 0.97665033589438\n",
+      "ROC accuracy: 0.9781432426808675\n",
+      "ROC accuracy: 0.9792764149496753\n",
+      "0.9782\n",
+      "{'num_leaves': 302, 'max_depth': 157, 'n_estimators': 1200, 'subsample_for_bin': 290858, 'min_child_samples': 79, 'reg_alpha': 1.0919573524807884, 'colsample_bytree': 0.5653288564015742, 'learning_rate': 0.028565794309535042}\n"
      ]
     }
    ],
    "source": [
-    "n_fold = 8\n",
-    "folds = StratifiedKFold(n_splits=n_fold, shuffle=True)\n",
-    "\n",
     "model = LGBMClassifier(metric='auc')\n",
     "model.set_params(**params)\n",
     "\n",
+    "n_fold = 8\n",
+    "folds = StratifiedKFold(n_splits=n_fold, shuffle=True)\n",
+    "\n",
     "model_scores = []\n",
-    "model_scores_tr = []\n",
     "for train_index, valid_index in folds.split(X_train, y_train):\n",
-    "    \n",
     "    X_train_, X_valid = X_train.iloc[train_index], X_train.iloc[valid_index]\n",
     "    y_train_, y_valid = y_train.iloc[train_index], y_train.iloc[valid_index]\n",
     "    model.fit(X_train_,y_train_)\n",
-    "    train_val = model.predict_proba(X_train_)[:,1]\n",
-    "    model_scores_tr.append(roc_auc_score(y_train_, train_val))\n",
-    "    del X_train_,y_train_, train_val\n",
-    "    pred = model.predict_proba(X_test)[:,1]\n",
-    "    val = model.predict_proba(X_valid)[:,1]\n",
-    "    \n",
+    "    del X_train_,y_train_\n",
+    "    pred=model.predict_proba(X_test)[:,1]\n",
+    "    val=model.predict_proba(X_valid)[:,1]\n",
     "    del X_valid\n",
     "    model_scores.append(roc_auc_score(y_valid, val))\n",
-    "    print('ROC accuracy: {}, ROC train: {}'.format(model_scores[-1], model_scores_tr[-1]))\n",
+    "    print('ROC accuracy: {}'.format(model_scores[-1]))\n",
     "    del val, y_valid\n",
     "    submission['isFraud'] = submission['isFraud'] + pred / n_fold\n",
     "    del pred\n",
-    "    gc.collect()\n",
     "    \n",
     "model_score = np.round(np.mean(model_scores),4)\n",
     "print(model_score)\n",
@@ -628,11 +566,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-15T11:13:02.736590Z",
-     "start_time": "2019-08-15T11:13:01.396730Z"
+     "end_time": "2019-08-14T14:26:27.328358Z",
+     "start_time": "2019-08-14T14:26:25.790718Z"
     }
    },
    "outputs": [],
@@ -661,7 +599,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
