--- a/model.ipynb
+++ b/model.ipynb
@@ -5,44 +5,11 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-14T13:10:59.962610Z",
-     "start_time": "2019-08-14T13:10:59.960177Z"
+     "end_time": "2019-09-01T18:09:51.978063Z",
+     "start_time": "2019-09-01T18:09:50.150713Z"
     }
    },
    "outputs": [],
-   "source": [
-    "# !rm -r ieee\n",
-    "# !rm -r codes\n",
-    "# !git clone https://github.com/PiotrekGa/ieee.git\n",
-    "# !mv ieee/codes ."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-08-14T13:11:03.640061Z",
-     "start_time": "2019-08-14T13:10:59.966107Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/piotrgabrys/.pyenv/versions/miniconda3-4.3.30/lib/python3.6/site-packages/lightgbm/__init__.py:46: UserWarning: Starting from version 2.2.1, the library file in distribution wheels for macOS is built by the Apple Clang (Xcode_8.3.3) compiler.\n",
-      "This means that in case of installing LightGBM from PyPI via the ``pip install lightgbm`` command, you don't need to install the gcc compiler anymore.\n",
-      "Instead of that, you need to install the OpenMP library, which is required for running LightGBM on the system with the Apple Clang compiler.\n",
-      "You can install the OpenMP library by the following command: ``brew install libomp``.\n",
-      "  \"You can install the OpenMP library by the following command: ``brew install libomp``.\", UserWarning)\n",
-      "Using TensorFlow backend.\n",
-      "WARNING: Logging before flag parsing goes to stderr.\n",
-      "W0814 15:11:03.619426 4610758080 deprecation_wrapper.py:119] From /Users/piotrgabrys/.pyenv/versions/miniconda3-4.3.30/lib/python3.6/site-packages/optuna/integration/tensorflow.py:7: The name tf.train.SessionRunHook is deprecated. Please use tf.estimator.SessionRunHook instead.\n",
-      "\n"
-     ]
-    }
-   ],
    "source": [
     "import os\n",
     "import gc\n",
@@ -70,11 +37,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-14T13:11:03.648576Z",
-     "start_time": "2019-08-14T13:11:03.644019Z"
+     "end_time": "2019-09-01T18:09:51.984036Z",
+     "start_time": "2019-09-01T18:09:51.980788Z"
     },
     "lines_to_next_cell": 2
    },
@@ -86,11 +53,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-14T13:11:09.942873Z",
-     "start_time": "2019-08-14T13:11:03.651979Z"
+     "end_time": "2019-09-01T18:10:04.058409Z",
+     "start_time": "2019-09-01T18:09:51.985744Z"
     },
     "_cell_guid": "79c7e3d0-c299-4dcb-8224-4455121ee9b0",
     "_uuid": "d629ff2d2480ee46fbb7e2d37f6b5fab8052498a",
@@ -112,27 +79,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-14T13:11:22.841402Z",
-     "start_time": "2019-08-14T13:11:09.944690Z"
+     "end_time": "2019-09-01T18:10:26.205244Z",
+     "start_time": "2019-09-01T18:10:04.059885Z"
     }
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "start\n",
-      "hashing finished\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/piotrgabrys/data/python3/ieee/codes/fe_users.py:19: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
+      "/home/pgabrys/data/kaggle/ieee/codes/fe_users.py:17: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
       "of pandas will change to not sort by default.\n",
       "\n",
       "To accept the future behavior, pass 'sort=False'.\n",
@@ -140,16 +99,6 @@
       "To retain the current behavior and silence the warning, pass 'sort=True'.\n",
       "\n",
       "  all_data = pd.concat([train, test])\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "concat data finished\n",
-      "grouping finished\n",
-      "stats calculated\n",
-      "merged all data\n"
      ]
     }
    ],
@@ -159,11 +108,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-14T13:11:26.078826Z",
-     "start_time": "2019-08-14T13:11:22.843262Z"
+     "end_time": "2019-09-01T18:10:29.449857Z",
+     "start_time": "2019-09-01T18:10:26.206677Z"
     }
    },
    "outputs": [
@@ -181,11 +130,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-14T13:11:26.875316Z",
-     "start_time": "2019-08-14T13:11:26.081448Z"
+     "end_time": "2019-09-01T18:10:30.070911Z",
+     "start_time": "2019-09-01T18:10:29.451281Z"
     }
    },
    "outputs": [],
@@ -195,11 +144,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-14T13:12:02.489063Z",
-     "start_time": "2019-08-14T13:11:26.877345Z"
+     "end_time": "2019-09-01T18:10:59.272949Z",
+     "start_time": "2019-09-01T18:10:30.072285Z"
     }
    },
    "outputs": [],
@@ -215,11 +164,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-14T13:12:03.061473Z",
-     "start_time": "2019-08-14T13:12:02.492576Z"
+     "end_time": "2019-09-01T18:10:59.670377Z",
+     "start_time": "2019-09-01T18:10:59.275668Z"
     }
    },
    "outputs": [],
@@ -229,11 +178,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-14T13:12:14.092156Z",
-     "start_time": "2019-08-14T13:12:03.063835Z"
+     "end_time": "2019-09-01T18:11:20.037298Z",
+     "start_time": "2019-09-01T18:10:59.672127Z"
     }
    },
    "outputs": [],
@@ -243,11 +192,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-14T13:12:14.174766Z",
-     "start_time": "2019-08-14T13:12:14.093974Z"
+     "end_time": "2019-09-01T18:11:20.099268Z",
+     "start_time": "2019-09-01T18:11:20.038891Z"
     },
     "lines_to_next_cell": 2
    },
@@ -258,11 +207,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-14T13:12:41.541952Z",
-     "start_time": "2019-08-14T13:12:14.176800Z"
+     "end_time": "2019-09-01T18:11:39.563790Z",
+     "start_time": "2019-09-01T18:11:20.100832Z"
     },
     "lines_to_next_cell": 2
    },
@@ -274,11 +223,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-14T13:12:52.478978Z",
-     "start_time": "2019-08-14T13:12:41.543885Z"
+     "end_time": "2019-09-01T18:11:46.656852Z",
+     "start_time": "2019-09-01T18:11:39.565304Z"
     }
    },
    "outputs": [],
@@ -304,11 +253,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-14T13:12:52.493456Z",
-     "start_time": "2019-08-14T13:12:52.486361Z"
+     "end_time": "2019-09-01T18:11:46.662892Z",
+     "start_time": "2019-09-01T18:11:46.658154Z"
     }
    },
    "outputs": [],
@@ -319,11 +268,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-14T13:12:52.501487Z",
-     "start_time": "2019-08-14T13:12:52.496629Z"
+     "end_time": "2019-09-01T18:11:46.668406Z",
+     "start_time": "2019-09-01T18:11:46.665298Z"
     }
    },
    "outputs": [],
@@ -333,18 +282,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-14T13:12:52.513170Z",
-     "start_time": "2019-08-14T13:12:52.504723Z"
+     "end_time": "2019-09-01T18:11:46.685515Z",
+     "start_time": "2019-09-01T18:11:46.670681Z"
     }
    },
    "outputs": [],
    "source": [
     "def cross_val_score2(model, X_train, y_train, n_fold):\n",
     "    \n",
-    "    folds = StratifiedKFold(n_splits=n_fold, shuffle=True)\n",
+    "    folds = StratifiedKFold(n_splits=n_fold, shuffle=True, random_state=42)\n",
     "    \n",
     "    model_scores = []\n",
     "    for train_index, valid_index in folds.split(X_train, y_train):\n",
@@ -357,6 +306,7 @@
     "        model_scores.append(roc_auc_score(y_valid, val))\n",
     "        print('ROC accuracy: {}'.format(model_scores[-1]))\n",
     "        del val, y_valid\n",
+    "        gc.collect()\n",
     "    \n",
     "    print('')\n",
     "    return np.mean(model_scores)"
@@ -364,84 +314,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-14T13:12:52.523301Z",
-     "start_time": "2019-08-14T13:12:52.515667Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def objective(trial):\n",
-    "    \n",
-    "    joblib.dump(study, 'study.pkl')\n",
-    "    \n",
-    "    num_leaves = trial.suggest_int('num_leaves', 300, 310) \n",
-    "    max_depth = trial.suggest_int('max_depth', 150, 160) \n",
-    "    n_estimators = trial.suggest_int('n_estimators', 1150, 1250) \n",
-    "    subsample_for_bin = trial.suggest_int('subsample_for_bin', 285858, 295858) \n",
-    "    min_child_samples = trial.suggest_int('min_child_samples', 75, 85) \n",
-    "    reg_alpha = trial.suggest_uniform('reg_alpha', 1.0, 1.1) \n",
-    "    colsample_bytree = trial.suggest_uniform('colsample_bytree', 0.56, 0.57) \n",
-    "    learning_rate = trial.suggest_loguniform('learning_rate', 0.02, 0.03)   \n",
-    "\n",
-    "    params = {\n",
-    "        'num_leaves': num_leaves,\n",
-    "        'max_depth': max_depth,\n",
-    "        'n_estimators': n_estimators,\n",
-    "        'subsample_for_bin': subsample_for_bin,\n",
-    "        'min_child_samples': min_child_samples,\n",
-    "        'reg_alpha': reg_alpha,\n",
-    "        'colsample_bytree': colsample_bytree,\n",
-    "        'learning_rate': learning_rate\n",
-    "    }\n",
-    "    \n",
-    "    model.set_params(**params)\n",
-    "\n",
-    "    return - cross_val_score2(model, X_train, y_train, 8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-08-14T13:12:52.533249Z",
-     "start_time": "2019-08-14T13:12:52.525940Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "if SEARCH_PARAMS:\n",
-    "\n",
-    "    if os.path.isfile('study.pkl'):\n",
-    "        study = joblib.load('study.pkl')\n",
-    "    else:\n",
-    "        study = optuna.create_study()\n",
-    "    study.optimize(objective, n_trials=5)\n",
-    "    \n",
-    "    params = study.best_params\n",
-    "\n",
-    "else:\n",
-    "    \n",
-    "    params = {'num_leaves': 302,\n",
-    "             'max_depth': 157,\n",
-    "             'n_estimators': 1200,\n",
-    "             'subsample_for_bin': 290858,\n",
-    "             'min_child_samples': 79,\n",
-    "             'reg_alpha': 1.0919573524807885,\n",
-    "             'colsample_bytree': 0.5653288564015742,\n",
-    "             'learning_rate': 0.028565794309535042}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-08-14T13:12:52.547630Z",
-     "start_time": "2019-08-14T13:12:52.536030Z"
+     "end_time": "2019-09-01T18:11:46.702339Z",
+     "start_time": "2019-09-01T18:11:46.687337Z"
     }
    },
    "outputs": [],
@@ -477,11 +354,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-14T13:12:52.556915Z",
-     "start_time": "2019-08-14T13:12:52.550537Z"
+     "end_time": "2019-09-01T18:11:46.708885Z",
+     "start_time": "2019-09-01T18:11:46.703974Z"
     }
    },
    "outputs": [],
@@ -512,11 +389,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-14T14:26:25.765450Z",
-     "start_time": "2019-08-14T13:12:52.559338Z"
+     "start_time": "2019-09-01T18:09:50.218Z"
     }
    },
    "outputs": [
@@ -524,16 +400,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ROC accuracy: 0.9762962995571658\n",
-      "ROC accuracy: 0.9792364570859659\n",
-      "ROC accuracy: 0.9789477070938123\n",
-      "ROC accuracy: 0.9755484028383585\n",
-      "ROC accuracy: 0.9816712831067586\n",
-      "ROC accuracy: 0.97665033589438\n",
-      "ROC accuracy: 0.9781432426808675\n",
-      "ROC accuracy: 0.9792764149496753\n",
-      "0.9782\n",
-      "{'num_leaves': 302, 'max_depth': 157, 'n_estimators': 1200, 'subsample_for_bin': 290858, 'min_child_samples': 79, 'reg_alpha': 1.0919573524807884, 'colsample_bytree': 0.5653288564015742, 'learning_rate': 0.028565794309535042}\n"
+      "ROC accuracy: 0.9757334408768087\n"
      ]
     }
    ],
@@ -542,7 +409,7 @@
     "model.set_params(**params)\n",
     "\n",
     "n_fold = 8\n",
-    "folds = StratifiedKFold(n_splits=n_fold, shuffle=True)\n",
+    "folds = StratifiedKFold(n_splits=n_fold, shuffle=True, random_state=42)\n",
     "\n",
     "model_scores = []\n",
     "for train_index, valid_index in folds.split(X_train, y_train):\n",
@@ -558,6 +425,7 @@
     "    del val, y_valid\n",
     "    submission['isFraud'] = submission['isFraud'] + pred / n_fold\n",
     "    del pred\n",
+    "    gc.collect()\n",
     "    \n",
     "model_score = np.round(np.mean(model_scores),4)\n",
     "print(model_score)\n",
@@ -566,11 +434,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-14T14:26:27.328358Z",
-     "start_time": "2019-08-14T14:26:25.790718Z"
+     "start_time": "2019-09-01T18:09:50.223Z"
     }
    },
    "outputs": [],
@@ -599,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
