--- a/model.ipynb
+++ b/model.ipynb
@@ -5,11 +5,23 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-01T18:09:51.978063Z",
-     "start_time": "2019-09-01T18:09:50.150713Z"
+     "end_time": "2019-09-02T07:36:27.880094Z",
+     "start_time": "2019-09-02T07:36:25.561629Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/piotrgabrys/.pyenv/versions/miniconda3-4.3.30/lib/python3.6/site-packages/lightgbm/__init__.py:46: UserWarning: Starting from version 2.2.1, the library file in distribution wheels for macOS is built by the Apple Clang (Xcode_8.3.3) compiler.\n",
+      "This means that in case of installing LightGBM from PyPI via the ``pip install lightgbm`` command, you don't need to install the gcc compiler anymore.\n",
+      "Instead of that, you need to install the OpenMP library, which is required for running LightGBM on the system with the Apple Clang compiler.\n",
+      "You can install the OpenMP library by the following command: ``brew install libomp``.\n",
+      "  \"You can install the OpenMP library by the following command: ``brew install libomp``.\", UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import gc\n",
@@ -20,9 +32,6 @@
     "\n",
     "from lightgbm import LGBMClassifier\n",
     "import optuna\n",
-    "\n",
-    "from sklearn.metrics import roc_auc_score\n",
-    "from sklearn.model_selection import StratifiedKFold, cross_val_score\n",
     "\n",
     "from codes import utils\n",
     "from codes import fe_browser\n",
@@ -40,15 +49,16 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-01T18:09:51.984036Z",
-     "start_time": "2019-09-01T18:09:51.980788Z"
+     "end_time": "2019-09-02T07:36:27.884534Z",
+     "start_time": "2019-09-02T07:36:27.881873Z"
     },
     "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": [
     "DATA_PATH = '../input/'\n",
-    "SEARCH_PARAMS = False"
+    "SEARCH_PARAMS = False\n",
+    "N_FOLD = 8"
    ]
   },
   {
@@ -56,8 +66,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-01T18:10:04.058409Z",
-     "start_time": "2019-09-01T18:09:51.985744Z"
+     "end_time": "2019-09-02T07:36:38.103608Z",
+     "start_time": "2019-09-02T07:36:27.887633Z"
     },
     "_cell_guid": "79c7e3d0-c299-4dcb-8224-4455121ee9b0",
     "_uuid": "d629ff2d2480ee46fbb7e2d37f6b5fab8052498a",
@@ -82,8 +92,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-01T18:10:26.205244Z",
-     "start_time": "2019-09-01T18:10:04.059885Z"
+     "end_time": "2019-09-02T07:37:09.194346Z",
+     "start_time": "2019-09-02T07:36:38.108745Z"
     }
    },
    "outputs": [
@@ -91,7 +101,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/pgabrys/data/kaggle/ieee/codes/fe_users.py:17: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
+      "/Users/piotrgabrys/data/python3/ieee/codes/fe_users.py:17: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
       "of pandas will change to not sort by default.\n",
       "\n",
       "To accept the future behavior, pass 'sort=False'.\n",
@@ -111,8 +121,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-01T18:10:29.449857Z",
-     "start_time": "2019-09-01T18:10:26.206677Z"
+     "end_time": "2019-09-02T07:37:12.225503Z",
+     "start_time": "2019-09-02T07:37:09.196458Z"
     }
    },
    "outputs": [
@@ -133,8 +143,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-01T18:10:30.070911Z",
-     "start_time": "2019-09-01T18:10:29.451281Z"
+     "end_time": "2019-09-02T07:37:12.955723Z",
+     "start_time": "2019-09-02T07:37:12.227664Z"
     }
    },
    "outputs": [],
@@ -147,8 +157,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-01T18:10:59.272949Z",
-     "start_time": "2019-09-01T18:10:30.072285Z"
+     "end_time": "2019-09-02T07:37:43.029823Z",
+     "start_time": "2019-09-02T07:37:12.957988Z"
     }
    },
    "outputs": [],
@@ -167,8 +177,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-01T18:10:59.670377Z",
-     "start_time": "2019-09-01T18:10:59.275668Z"
+     "end_time": "2019-09-02T07:37:43.559948Z",
+     "start_time": "2019-09-02T07:37:43.033207Z"
     }
    },
    "outputs": [],
@@ -181,8 +191,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-01T18:11:20.037298Z",
-     "start_time": "2019-09-01T18:10:59.672127Z"
+     "end_time": "2019-09-02T07:37:52.904918Z",
+     "start_time": "2019-09-02T07:37:43.561852Z"
     }
    },
    "outputs": [],
@@ -195,8 +205,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-01T18:11:20.099268Z",
-     "start_time": "2019-09-01T18:11:20.038891Z"
+     "end_time": "2019-09-02T07:37:52.978530Z",
+     "start_time": "2019-09-02T07:37:52.906665Z"
     },
     "lines_to_next_cell": 2
    },
@@ -210,8 +220,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-01T18:11:39.563790Z",
-     "start_time": "2019-09-01T18:11:20.100832Z"
+     "end_time": "2019-09-02T07:38:14.412609Z",
+     "start_time": "2019-09-02T07:37:52.980218Z"
     },
     "lines_to_next_cell": 2
    },
@@ -226,8 +236,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-01T18:11:46.656852Z",
-     "start_time": "2019-09-01T18:11:39.565304Z"
+     "end_time": "2019-09-02T07:38:23.462214Z",
+     "start_time": "2019-09-02T07:38:14.414462Z"
     }
    },
    "outputs": [],
@@ -256,8 +266,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-01T18:11:46.662892Z",
-     "start_time": "2019-09-01T18:11:46.658154Z"
+     "end_time": "2019-09-02T07:38:23.469572Z",
+     "start_time": "2019-09-02T07:38:23.463646Z"
     }
    },
    "outputs": [],
@@ -271,8 +281,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-01T18:11:46.668406Z",
-     "start_time": "2019-09-01T18:11:46.665298Z"
+     "end_time": "2019-09-02T07:38:23.475296Z",
+     "start_time": "2019-09-02T07:38:23.471986Z"
     }
    },
    "outputs": [],
@@ -285,40 +295,8 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-01T18:11:46.685515Z",
-     "start_time": "2019-09-01T18:11:46.670681Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def cross_val_score2(model, X_train, y_train, n_fold):\n",
-    "    \n",
-    "    folds = StratifiedKFold(n_splits=n_fold, shuffle=True, random_state=42)\n",
-    "    \n",
-    "    model_scores = []\n",
-    "    for train_index, valid_index in folds.split(X_train, y_train):\n",
-    "        X_train_, X_valid = X_train.iloc[train_index], X_train.iloc[valid_index]\n",
-    "        y_train_, y_valid = y_train.iloc[train_index], y_train.iloc[valid_index]\n",
-    "        model.fit(X_train_,y_train_)\n",
-    "        del X_train_,y_train_\n",
-    "        val = model.predict_proba(X_valid)[:,1]\n",
-    "        del X_valid\n",
-    "        model_scores.append(roc_auc_score(y_valid, val))\n",
-    "        print('ROC accuracy: {}'.format(model_scores[-1]))\n",
-    "        del val, y_valid\n",
-    "        gc.collect()\n",
-    "    \n",
-    "    print('')\n",
-    "    return np.mean(model_scores)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-09-01T18:11:46.702339Z",
-     "start_time": "2019-09-01T18:11:46.687337Z"
+     "end_time": "2019-09-02T07:38:23.484180Z",
+     "start_time": "2019-09-02T07:38:23.477776Z"
     }
    },
    "outputs": [],
@@ -349,16 +327,16 @@
     "    \n",
     "    model.set_params(**params)\n",
     "\n",
-    "    return - cross_val_score2(model, X_train, y_train, 8)"
+    "    return - utils.cross_val_score_auc(model, X_train, y_train, n_fold=N_FOLD, shuffle=False, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-01T18:11:46.708885Z",
-     "start_time": "2019-09-01T18:11:46.703974Z"
+     "end_time": "2019-09-02T07:38:23.491037Z",
+     "start_time": "2019-09-02T07:38:23.486303Z"
     }
    },
    "outputs": [],
@@ -392,59 +370,31 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-09-01T18:09:50.218Z"
+     "start_time": "2019-09-02T07:39:23.132Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ROC accuracy: 0.9757334408768087\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = LGBMClassifier(metric='auc')\n",
     "model.set_params(**params)\n",
     "\n",
-    "n_fold = 8\n",
-    "folds = StratifiedKFold(n_splits=n_fold, shuffle=True, random_state=42)\n",
-    "\n",
-    "model_scores = []\n",
-    "for train_index, valid_index in folds.split(X_train, y_train):\n",
-    "    X_train_, X_valid = X_train.iloc[train_index], X_train.iloc[valid_index]\n",
-    "    y_train_, y_valid = y_train.iloc[train_index], y_train.iloc[valid_index]\n",
-    "    model.fit(X_train_,y_train_)\n",
-    "    del X_train_,y_train_\n",
-    "    pred=model.predict_proba(X_test)[:,1]\n",
-    "    val=model.predict_proba(X_valid)[:,1]\n",
-    "    del X_valid\n",
-    "    model_scores.append(roc_auc_score(y_valid, val))\n",
-    "    print('ROC accuracy: {}'.format(model_scores[-1]))\n",
-    "    del val, y_valid\n",
-    "    submission['isFraud'] = submission['isFraud'] + pred / n_fold\n",
-    "    del pred\n",
-    "    gc.collect()\n",
-    "    \n",
-    "model_score = np.round(np.mean(model_scores),4)\n",
-    "print(model_score)\n",
-    "print(params)"
+    "utils.cross_val_score_auc(model, \n",
+    "                          X_train, \n",
+    "                          y_train, \n",
+    "                          n_fold=N_FOLD, \n",
+    "                          shuffle=False, \n",
+    "                          random_state=42, \n",
+    "                          predict=True,\n",
+    "                          X_test=X_test,\n",
+    "                          submission=submission)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2019-09-01T18:09:50.223Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "timestamp = str(int(datetime.timestamp(datetime.now())))\n",
-    "submission.to_csv('{}_submission_{}.csv'.format(timestamp, str(model_score)))"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -466,7 +416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
